# Functor

./: Functor.cabal  LICENSE  README.md
app/: Main.hs
src/: Functors1.hs  HeavyL.hs  Lib.hs  ReplaceEx.hs
