name:                Functor
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Neo03/Functor#readme
license:             BSD3
license-file:        LICENSE
author:              Vasiliy Simakov
maintainer:          vasimakov87@gmail.com
copyright:           MIT
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                    ,  Functors1
                    ,  ReplaceEx
                    ,  HevayL 
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable Functor-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Functor
  default-language:    Haskell2010

test-suite Functor-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Functor
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Neo03/Functor
